# conteval-pois-Flower

./: .gitignore  README.md  aggregate_results.py  conteval_own.py  data_reader.py  debug_data_loading.py  generate_client_contribution_pvalue_tables.py  generate_client_contribution_tables.py  plotting.py  requirements.txt  run_experiments.sh  table_generator.py  tasks.txt  test_global_loss_plotting.py  test_method_comparison.py  test_method_comparison_selective.py  test_regular_final_rounds.py  test_selective_rounds.py  visualization_and_data_guide.md  visualization_utils.py
fl-tabular/: pyproject.toml
fl-tabular/fltabular/: client_app.py  contribution_strategy.py  contribution_utils.py  leave_one_out.py  model_poison.py  server_app.py  task.py
fl-tabular/output/: results.json
fl-vision-2/: pyproject.toml
fl-vision-2/flvision/: client_app.py  contribution_strategy.py  contribution_utils.py  leave_one_out.py  model_poison.py  server_app.py  task.py
